# mini-cmake-qt6

./: CMakeLists.txt
src/: library.cpp  library.h  main.cpp
